--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 </head>
 <body>
 <div class="container">
-  <div class="header__image">
+  <figure class="container__image">
     <img src="./assets/images/image-omelette.jpeg" alt="omlette"/>
-  </div>
+  </figure>
   <div class="header">
    <h1 class="header__h1">Simple Omelette Recipe</h1> 
    <p class="header__p">
@@ -27,11 +27,11 @@
 </p>
 </div>
 <div class="preparation">
- <h3 class="preparation__h3">Preparation time</h3> 
+ <p class="preparation__p"><b>Preparation time</b></p> 
 <ul class="preparation__ul">
-  <li>Total: Approximately 10 minutes</li>
-  <li>Preparation: 5 minutes</li>
-  <li>Cooking: 5 minutes</li>
+  <li><b>Total:</b> Approximately 10 minutes</li>
+  <li><b>Preparation:</b> 5 minutes</li>
+  <li><b>Cooking:</b> 5 minutes</li>
 </ul>
 </div>
 <div class="ingredients">
@@ -47,16 +47,16 @@
   <div class="instructions">
     <h2 class="instructions__h2">Instructions</h2>
     <ol type="1" class="instructions__ol">
-      <li>Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
+      <li><b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
         You can add a tablespoon of water or milk for a fluffier texture.</li>
-      <li>Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.</li>
-      <li>Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
+      <li><b>Heat the pan:</b> Place a non-stick frying pan over medium heat and add butter or oil.</li>
+      <li><b>Cook the omelette:</b> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
         the eggs evenly coat the surface.</li>
-      <li>Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
+      <li><b>Add fillings (optional):</b> When the eggs begin to set at the edges but are still slightly runny in the 
         middle, sprinkle your chosen fillings over one half of the omelette.</li>
-      <li>Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
+      <li><b>Fold and serve:</b> As the omelette continues to cook, carefully lift one edge and fold it over the 
         fillings. Let it cook for another minute, then slide it onto a plate.</li>
-      <li>Enjoy: Serve hot, with additional salt and pepper if needed.</li>
+      <li><b>Enjoy:</b> Serve hot, with additional salt and pepper if needed.</li>
     </ol>
   </div> 
   <div class="nutrition">
@@ -65,28 +65,30 @@
     </h2>
     <p>The table below shows nutritional values per serving without the additional fillings.</p>
     <table class="nutrition__table">
-       <tr>
+       <tr class="nutrition__table--tr">
           <td>Calories</td>
-          <td>277Kcal</td>
+          <td class="nutrition__table--secondcol">277Kcal</td>
         </tr>
         <tr>
           <td>Carbs</td>
-          <td>0g</td>
+          <td class="nutrition__table--secondcol">0g</td>
         </tr>
         <tr>
           <td>Protein</td>
-          <td>20g</td>
+          <td class="nutrition__table--secondcol">20g</td>
         </tr>
         <tr>
           <td>Fat</td>
-          <td>22g</td>
+          <td class="nutrition__table--secondcol">22g</td>
         </tr>
      </table>
   </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://deepab.com.np">Deepa Bhandari</a>.
-  </div>
 </div>
+<footer class="footer">
+<div class="attribution">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+  Coded by <a href="https://deepab.com.np">Deepa Bhandari</a>.
+</div>
+</footer>
 </body>
 </html>
